[package]
name = "i2c-pio"
version = "0.6.0"
edition = "2021"
license = "Apache-2.0"
description = "I2C driver implementation using the RP2040's PIO peripheral."
documentation = "https://docs.rs/i2c-pio"
repository = "https://github.com/rp-rs/i2c-pio-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.3"
eh1_0_alpha = { version = "=1.0.0-alpha.9", package = "embedded-hal", optional = true }
embedded-hal = "0.2.6"
nb = "1.0.0"
pio = "0.2.0"
pio-proc = "0.2.0"
rp2040-hal = "0.8.0"
fugit = "0.3.5"
defmt = { version = "0.3.0", optional = true }

[patch.crates-io]
rp2040-hal = { git = "https://github.com/rp-rs/rp-hal" }
