[package]
name = "i2c-pio"
version = "0.9.0"
edition = "2021"
license = "Apache-2.0"
description = "I2C driver implementation using the RP2040's PIO peripheral."
documentation = "https://docs.rs/i2c-pio"
repository = "https://github.com/rp-rs/i2c-pio-rs"

[workspace]
members = ["on-target-tests"]

[dependencies]
cortex-m = "0.7.3"
embedded-hal = { version = "1.0.0" }
embedded_hal_0_2 = { version = "0.2.6", package = "embedded-hal" }
nb = "1.0.0"
pio = "0.2.0"
pio-proc = "0.2.0"
rp2040-hal = "0.11.0"
fugit = "0.3.5"
defmt = { version = "0.3.0", optional = true }
either = { version = "1.10.0", default-features = false }
heapless = { version = "0.8.0", default-features = false }
futures = { version = "0.3.30", default-features = false, features = [
  "async-await",
] }
embedded-hal-async = "1.0.0"
i2c-write-iter = { version = "1.0.0", features = ["async"], optional = true }

[profile.dev]
codegen-units = 1
incremental = false
lto = 'fat'
opt-level = 's'
debug = 2

[profile.test]
codegen-units = 1
incremental = false
lto = 'fat'
opt-level = 2
debug = 2

[profile.release]
codegen-units = 1
incremental = false
lto = 'fat'
opt-level = 's'
debug = 2

[features]
defmt = ["dep:defmt", "heapless/defmt-03", "embedded-hal-async/defmt-03"]
i2c-write-iter = ["dep:i2c-write-iter"]

[patch.crates-io]
rp2040-hal = { git = "https://github.com/ithinuel/rp-hal", branch = "async-pio" }
